# DesktopChar

./: .env.example  .gitignore  AI桌面角色选型调研.md  README.md  desktop-char.config.example.json  package-lock.json  package.json  tsconfig.json
apps/desktop/: index.html  vite.config.ts
apps/desktop/electron/: main.mjs  (+31 more)
docs/: action-catalog.md  architecture.md  audio-lip-sync-acceptance.md  avatar-runtime.md  configuration.md  conversation-orchestration.md  desktop-shell.md  desktop-ui-engine.md  expression-catalog.md  external-agent-http.md  gaze-calibration.md  live2d-assets.md  mcp-services.md  motion-audit.md  performance-model-integration.md  performance-model-provider-integration.md  scene-engine.md  speech-bubble.md  tts-adapter.md  tts-mcp-integration.md  tts-mcp-streaming-extension.md
docs/references/: open-llm-vtuber.md  qwen3-tts.md  qwen3.5-2b.md
local-tts-mcp/: README.md  jrpg-blip.mjs  jrpg-blip.test.mjs  server.mjs  service.mjs  service.test.mjs
native/cursor-refresh/: binding.gyp  cursor_refresh.cc
performance-model-service/: README.md  bootstrap.ps1  pyproject.toml  smoke-test.ps1  start.ps1
references/: README.md
scripts/: build-native.mjs  desktop-mcp-tts.ps1  desktop-smoke.mjs  drag-compositor-diagnostic.mjs  drag-screen-sampler.py  managed-performance-exit-diagnostic.mjs  motion-audit.ts  performance-diagnostic.ts  run-koffi-electron-test.mjs  smoke.mjs  start-web.mjs  test-koffi-electron.mjs  test-native.mjs  topmost-recovery-diagnostic.mjs  tts-diagnostic.ts
tts-mcp-profile/: contract.mjs
tts-mcp-profiles/: local.json  qwen.json
(+10 files in other folders)
